--- a/css/styles.css
+++ b/css/styles.css
@@ -89,48 +89,13 @@ footer {
   font-weight: bold;
   font-family: "Oswald", sans-serif;
 }
-.logoheader {
-  display: flex;
-  align-items: center;
-}
-header {
+.fondoheader {
   background-color: rgba(56, 148, 188, 255);
-  width: 100%;
-  min-height: 20px;
-  display: flex;
-  justify-content: space-between;
+}
+.navbar-collapse {
+  flex-grow: initial;
 }
 
-header h1 {
-  margin-left: 15px;
-  font-size: 28px;
-  color: white;
-  font-family: "Oswald", sans-serif;
-}
-header div img {
-  height: 53px;
-  width: 53px;
-  padding: 8px;
-  margin-left: 3px;
-}
-.navbar {
-  display: flex;
-  justify-content: space-between;
-  flex-direction: row;
-}
-.navbar li {
-  justify-content: space-between;
-  padding: 10px;
-  display: inline-block;
-  margin-left: 10px;
-  list-style: none;
-}
-.navbar li a {
-  text-decoration: none;
-  color: aliceblue;
-  font-size: 20px;
-  font-family: "Oswald", sans-serif;
-}
 /*Medidas*/
 html {
   font-size: 20px;
@@ -318,95 +283,7 @@ p img {
   padding-bottom: 13px;
 }
 /*Contacto*/
-.wrap {
-  height: 100%;
-  display: flex;
-  justify-content: center;
-}
 
-.button {
-  min-width: 300px;
-  min-height: 60px;
-  font-family: "Nunito", sans-serif;
-  font-size: 22px;
-  text-transform: uppercase;
-  letter-spacing: 1.3px;
-  font-weight: 700;
-  color: #313133;
-  background: #4fd1c5;
-  background: linear-gradient(
-    90deg,
-    rgba(129, 230, 217, 1) 0%,
-    rgba(79, 209, 197, 1) 100%
-  );
-  border: none;
-  border-radius: 1000px;
-  box-shadow: 12px 12px 24px rgba(79, 209, 197, 0.64);
-  transition: all 0.3s ease-in-out 0s;
-  cursor: pointer;
-  outline: none;
-  position: relative;
-  padding: 10px;
-}
-
-button::before {
-  content: "";
-  border-radius: 1000px;
-  min-width: calc(300px + 12px);
-  min-height: calc(60px + 12px);
-  border: 6px solid #00ffcb;
-  box-shadow: 0 0 60px rgba(0, 255, 203, 0.64);
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
-  opacity: 0;
-  transition: all 0.3s ease-in-out 0s;
-}
-
-.button:hover,
-.button:focus {
-  color: #313133;
-  transform: translateY(-6px);
-}
-
-button:hover::before,
-button:focus::before {
-  opacity: 1;
-}
-
-button::after {
-  content: "";
-  width: 30px;
-  height: 30px;
-  border-radius: 100%;
-  border: 6px solid #00ffcb;
-  position: absolute;
-  z-index: -1;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
-  animation: ring 1.5s infinite;
-}
-
-button:hover::after,
-button:focus::after {
-  animation: none;
-  display: none;
-}
-
-@keyframes ring {
-  0% {
-    width: 30px;
-    height: 30px;
-    opacity: 1;
-  }
-  100% {
-    width: 300px;
-    height: 300px;
-    opacity: 0;
-  }
-}
 .formularios {
   display: flex;
   flex-direction: column;
