--- a/sass/style.scss
+++ b/sass/style.scss
@@ -1,12 +1,18 @@
+$colorprincipal: rgba(56, 148, 188, 255);
+@mixin sizes($width, $height) {
+  height: $height;
+  width: $width;
+}
 /*fonts*/
 @import url("https://fonts.googleapis.com/css2?family=Oswald&display=swap");
 @import url("https://fonts.googleapis.com/css2?family=Roboto:wght@100&display=swap");
+
 /*selector universal*/
 * {
   margin: 0;
   padding: 0;
-  box-sizing: border-box; }
-
+  box-sizing: border-box;
+}
 footer {
   display: flex;
   flex-direction: row;
@@ -14,210 +20,227 @@ footer {
   background-image: url(/assets/images/footerbackgroundimg.png);
   background-size: cover;
   background-repeat: no-repeat;
-  background-position: center; }
-
+  background-position: center;
+}
 .container-fluid {
   display: flex;
-  flex-direction: row; }
-
+  flex-direction: row;
+}
 .container-sm {
   display: flex;
   flex-direction: column;
-  padding: 20px; }
+  padding: 20px;
+}
+@mixin img-size($height, $width) {
+  height: $height;
+  width: $width;
+}
 
 .fila {
   max-width: 56, 22;
   font-family: "Oswald", sans-serif;
-  padding: 10px; }
-  .fila img {
-    height: 36px;
-    width: 36px; }
+  padding: 10px;
+  img {
+    @include img-size(36px, 36px);
+  }
+}
 
 .fila2 {
   max-width: 56, 22;
   font-family: "Oswald", sans-serif;
-  padding: 10px; }
-  .fila2 img {
-    height: 36px;
-    width: 36px; }
+  padding: 10px;
+  img {
+    @include img-size(36px, 36px);
+  }
+}
 
 .container-sm h2 {
   font-size: 30px;
-  font-family: "Oswald", sans-serif; }
-
+  font-family: "Oswald", sans-serif;
+}
 .container-sm p {
   font-size: 18px;
-  font-family: "Oswald", sans-serif; }
+  font-family: "Oswald", sans-serif;
+}
 
 .containerlowfooter {
   width: 100%;
   display: flex;
   justify-content: space-between;
-  padding: 20px; }
-
+  padding: 20px;
+}
 .smalltext small {
   font-size: 20px;
   text-decoration: none;
   color: white;
   font-weight: bold;
-  font-family: "Oswald", sans-serif; }
-
+  font-family: "Oswald", sans-serif;
+}
 .smalltext1 small {
   display: none;
   font-size: 20px;
   text-decoration: none;
   color: white;
   font-weight: bold;
-  font-family: "Oswald", sans-serif; }
-
+  font-family: "Oswald", sans-serif;
+}
 .fondoheader {
-  background-color: #3894bc; }
-
+  background-color: $colorprincipal;
+}
 .navbar-collapse {
-  flex-grow: initial; }
+  flex-grow: initial;
+}
 
 /*Medidas*/
 html {
-  font-size: 20px; }
-
+  font-size: 20px;
+}
 /*index*/
 body {
   background-image: url(/assets/backgrounds/26358.jpg);
   background-repeat: no-repeat;
   background-position: center;
-  background-attachment: fixed; }
-
+  background-attachment: fixed;
+}
 .art1 {
   display: flex;
   flex-direction: column;
   align-items: center;
-  padding: 10px; }
+  padding: 10px;
+}
 
 .art1 img {
   float: left;
   width: 50%;
   padding-right: 20px;
-  border-radius: 55px; }
-
+  border-radius: 55px;
+}
 .titleart1 {
   font-family: "Oswald", sans-serif;
   font-weight: bold;
   font-size: 36px;
-  padding: 15px; }
-
+  padding: 15px;
+}
 .art1 p {
   font-family: "Roboto", sans-serif;
   font-weight: bold;
   padding: 20px;
-  line-height: 35px; }
+  line-height: 35px;
+}
 
 .art2 {
   display: flex;
   flex-direction: column;
-  align-items: center; }
-  .art2 img {
+  align-items: center;
+  img {
     padding-left: 20px;
-    border-radius: 55px; }
+    border-radius: 55px;
+  }
+}
 
 .art2 h2 {
   font-family: "Oswald", sans-serif;
   font-weight: bold;
   font-size: 36px;
-  padding: 15px; }
-
+  padding: 15px;
+}
 .art2 p {
   font-family: "Roboto", sans-serif;
   font-weight: bold;
   padding: 20px;
-  line-height: 35px; }
+  line-height: 35px;
+}
 
 .art3 {
   display: flex;
   flex-direction: column;
-  align-items: center; }
-
+  align-items: center;
+}
 .art3 h2 {
   font-family: "Oswald", sans-serif;
   font-weight: bold;
   font-size: 36px;
-  padding: 15px; }
-
+  padding: 15px;
+}
 .art3 p {
   font-family: "Roboto", sans-serif;
   font-weight: bold;
   padding: 20px;
-  line-height: 35px; }
-
+  line-height: 35px;
+}
 .art3 img {
   float: left;
   padding-right: 20px;
-  border-radius: 55px; }
-
+  border-radius: 55px;
+}
 /*CURSOS*/
 .cursostitle {
   font-family: "Oswald", sans-serif;
   font-weight: bold;
   font-size: 36px;
-  padding: 15px; }
-
+  padding: 15px;
+}
 .artcursos1 {
   display: flex;
   flex-direction: column;
   align-items: center;
-  width: 100%; }
-
+  width: 100%;
+}
 .artcursos2 {
   display: flex;
   flex-direction: column;
   align-items: center;
-  width: 100%; }
-
+  width: 100%;
+}
 .artcursos3 {
   display: flex;
   flex-direction: column;
   align-items: center;
-  width: 100%; }
-
+  width: 100%;
+}
 .artcursos4 {
   display: flex;
   flex-direction: column;
   align-items: center;
-  width: 100%; }
+  width: 100%;
+}
 
 .artcursos p {
   font-family: "Roboto", sans-serif;
   font-weight: bold;
   padding: 20px;
-  line-height: 35px; }
-
+  line-height: 35px;
+}
 .artcursos h2 {
   font-family: "Oswald", sans-serif;
   font-weight: bold;
-  font-size: 36px; }
+  font-size: 36px;
+}
 
 .imgc1 {
   border-radius: 55px;
   float: left;
   float: inline-start;
-  padding-right: 20px; }
-
+  padding-right: 20px;
+}
 .imgc2 {
   border-radius: 55px;
   float: right;
   float: inline-start;
-  padding-right: 20px; }
-
+  padding-right: 20px;
+}
 .imgc3 {
   border-radius: 55px;
   float: left;
   float: inline-start;
-  padding-right: 20px; }
-
+  padding-right: 20px;
+}
 .imgc4 {
   border-radius: 55px;
   float: right;
   float: inline-start;
-  padding-right: 20px; }
+  padding-right: 20px;
+}
 
 /*SERVICIOS*/
 .serviciostitle {
@@ -226,29 +249,29 @@ body {
   font-size: 36px;
   padding-top: 20px;
   padding-left: 60px;
-  padding-right: 60px; }
-
+  padding-right: 60px;
+}
 .artservicios {
-  display: flex; }
-
+  display: flex;
+}
 .artservicios p {
   font-family: "Roboto", sans-serif;
   font-weight: bold;
   padding-top: 20px;
   padding-left: 60px;
   padding-right: 60px;
-  line-height: 25px; }
-
+  line-height: 25px;
+}
 .artservicios img {
   float: right;
   max-width: fit-content;
-  border-radius: 55px; }
-
+  border-radius: 55px;
+}
 .temascursos {
   display: flex;
   flex-direction: column;
-  align-items: flex-start; }
-
+  align-items: flex-start;
+}
 .temascursos h2 {
   font-family: "Oswald", sans-serif;
   font-weight: bold;
@@ -256,61 +279,72 @@ body {
   padding: 10px;
   padding-top: 20px;
   padding-left: 60px;
-  padding-right: 60px; }
+  padding-right: 60px;
+}
 
 .temascursos li {
   padding-top: 20px;
   padding-right: 60px;
   font-family: "Roboto", sans-serif;
-  font-weight: bold; }
-
+  font-weight: bold;
+}
 p img {
   float: right;
   width: 40%;
-  padding-left: 20px; }
-
+  padding-left: 20px;
+}
 .temascursos ul {
   padding-left: 30px;
-  padding-bottom: 13px; }
-
+  padding-bottom: 13px;
+}
 /*Contacto*/
+
 .formularios {
   display: flex;
   flex-direction: column;
   align-items: center;
   padding: 15px;
   border-radius: 100px;
-  width: 100%; }
-
+  width: 100%;
+}
 .logo {
   text-align: center;
-  font-size: 3em; }
+  font-size: 3em;
+}
 
 .logo span {
-  color: #b70e21; }
+  color: #b70e21;
+}
 
 .contact-wrapper {
-  box-shadow: 0 0 20px 0 rgba(255, 255, 255, 0.3); }
+  box-shadow: 0 0 20px 0 rgba(255, 255, 255, 0.3);
+}
 
 .contact-wrapper > * {
-  padding: 1em; }
+  padding: 1em;
+}
 
 .contact-form {
-  background-color: #56c8f1; }
+  background-color: #56c8f1;
+}
 
 .contact-form form {
   display: grid;
-  grid-template-columns: 1fr 1fr; }
+  grid-template-columns: 1fr 1fr;
+}
 
 .contact-form form label {
-  display: block; }
+  display: block;
+}
 
 .contact-form form p {
   margin: 0;
-  padding: 1em; }
+  padding: 1em;
+}
 
 .contact-form form .block {
-  grid-column: 1 / 3; }
+  grid-column: 1 / 3;
+}
 
 .contact-form form input,
 .contact-form form textarea {
@@ -320,52 +354,56 @@ p img {
   background: none;
   outline: 0;
   color: #fff;
-  border-bottom: 1px solid #305fd6; }
+  border-bottom: 1px solid #305fd6;
+}
 
 /* CONTACT INFO */
 .contact-info {
-  background-color: #3894bc; }
+  background-color: rgba(56, 148, 188, 255);
+}
 
 .contact-info h4,
 .contact-info ul,
 .contact-info p {
   text-align: center;
   margin: 0 0 1rem 0;
-  list-style: none; }
+  list-style: none;
+}
 
 .textarealabel {
   padding: 30px;
-  padding-top: 20px; }
-
+  padding-top: 20px;
+}
 .formularios input {
-  width: 100%; }
-
+  width: 100%;
+}
 /*NOSOTROS*/
 .qstitle {
   font-family: "Oswald", sans-serif;
   font-weight: bold;
-  font-size: 36px; }
-
+  font-size: 36px;
+}
 .qscontainer {
   display: flex;
   flex-direction: column;
-  align-items: center; }
-
+  align-items: center;
+}
 .qscontainer img {
   border-radius: 55px;
-  padding: 20px; }
-
+  padding: 20px;
+}
 .qscontainer p {
   font-family: "Roboto", sans-serif;
   font-weight: bold;
   padding: 20px;
-  line-height: 30px; }
-
+  line-height: 30px;
+}
 .wrap {
   height: 100%;
   display: flex;
   align-items: center;
-  justify-content: center; }
+  justify-content: center;
+}
 
 .buttonform {
   min-width: 300px;
@@ -377,7 +415,11 @@ p img {
   font-weight: 700;
   color: #313133;
   background: #4fd1c5;
-  background: linear-gradient(90deg, #81e6d9 0%, #4fd1c5 100%);
+  background: linear-gradient(
+    90deg,
+    rgba(129, 230, 217, 1) 0%,
+    rgba(79, 209, 197, 1) 100%
+  );
   border: none;
   border-radius: 1000px;
   box-shadow: 12px 12px 24px rgba(79, 209, 197, 0.64);
@@ -385,7 +427,8 @@ p img {
   cursor: pointer;
   outline: none;
   position: relative;
-  padding: 10px; }
+  padding: 10px;
+}
 
 .buttonform::before {
   content: "";
@@ -399,16 +442,19 @@ p img {
   left: 50%;
   transform: translate(-50%, -50%);
   opacity: 0;
-  transition: all 0.3s ease-in-out 0s; }
+  transition: all 0.3s ease-in-out 0s;
+}
 
 .buttonform:hover,
 .buttonform:focus {
   color: #313133;
-  transform: translateY(-6px); }
+  transform: translateY(-6px);
+}
 
 .buttonform:hover::before,
 .buttonform:focus::before {
-  opacity: 1; }
+  opacity: 1;
+}
 
 .buttonform::after {
   content: "";
@@ -421,92 +467,116 @@ p img {
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
-  animation: ring 1.5s infinite; }
+  animation: ring 1.5s infinite;
+}
 
 .buttonform:hover::after,
 button:focus::after {
   animation: none;
-  display: none; }
+  display: none;
+}
 
 @keyframes ring {
   0% {
     width: 30px;
     height: 30px;
-    opacity: 1; }
+    opacity: 1;
+  }
   100% {
     width: 300px;
     height: 300px;
-    opacity: 0; } }
-
+    opacity: 0;
+  }
+}
 /*SERVICIOS*/
 .artservicios p {
   font-family: "Roboto", sans-serif;
   font-weight: bold;
   padding: 20px;
-  line-height: 30px; }
-
+  line-height: 30px;
+}
 @media screen and (max-width: 650px) {
   /*FOOTER*/
   .container-fluid {
-    flex-direction: column; }
+    flex-direction: column;
+  }
   .smalltext small {
-    display: none; }
+    display: none;
+  }
   .smalltext1 small {
     display: block;
     font-size: 20px;
     text-decoration: none;
     color: white;
     font-weight: bold;
-    font-family: "Oswald", sans-serif; }
+    font-family: "Oswald", sans-serif;
+  }
   /*FOOTER*/
   /*index*/
   .art1 img {
     float: none;
-    width: 100%; }
+    width: 100%;
+  }
   .art2 img {
     float: none;
-    width: 100%; }
+    width: 100%;
+  }
   .art3 img {
     float: none;
-    width: 100%; }
+    width: 100%;
+  }
   .art4 img {
     float: none;
-    width: 100%; }
+    width: 100%;
+  }
   /*index*/
+
   /*Cursos*/
+
   .imgc1 {
     float: none;
-    width: 100%; }
+    width: 100%;
+  }
   .imgc2 {
     float: none;
-    width: 100%; }
+    width: 100%;
+  }
   .imgc3 {
     float: none;
-    width: 100%; }
+    width: 100%;
+  }
   .imgc4 {
     float: none;
-    width: 100%; }
+    width: 100%;
+  }
   .artcursos1 p {
     font-size: 16px;
-    width: 85%; }
+    width: 85%;
+  }
   .artcursos2 p {
     font-size: 16px;
-    width: 85%; }
+    width: 85%;
+  }
   .artcursos3 p {
     font-size: 16px;
-    width: 85%; }
+    width: 85%;
+  }
   .artcursos4 p {
     font-size: 16px;
-    width: 85%; }
+    width: 85%;
+  }
   /*Cursos*/
   /*Nosotros*/
   .qscontainer img {
-    width: 100%; }
+    width: 100%;
+  }
   /*Nosotros*/
   /*Servicios*/
   .artservicios img {
     float: none;
-    width: 100%; }
+    width: 100%;
+  }
   /*Servicios*/
   /*Contacto*/
-  /*Contacto*/ }
+  /*Contacto*/
+}
