--- a/sass/style.scss
+++ b/sass/style.scss
@@ -174,6 +174,7 @@ body {
   border-radius: 55px;
 }
 /*CURSOS*/
+
 .cursostitle {
   font-family: "Oswald", sans-serif;
   font-weight: bold;
@@ -578,5 +579,15 @@ button:focus::after {
   }
   /*Servicios*/
   /*Contacto*/
+  /*Contacto*/
+}
+@media screen and (max-width: 425px) {
+  /*Contacto*/
+  .contact-form form p {
+    margin: 0;
+    padding: 1em;
+    display: block;
+  }
+
   /*Contacto*/
 }
