--- a/css/styles.css
+++ b/css/styles.css
@@ -736,6 +736,10 @@ button:focus::after {
     height: 100%;
     display: block;
   }
+  .card {
+    background-color: transparent;
+    border: 0;
+  }
   .div4 .card {
     width: 100%;
   }
